# kitab

./: CHANGELOG  Cargo.toml  set.sh
dublincore/: dublincore.txt
src/: biblatex.rs  digest.rs  error.rs  lib.rs  main.rs  meta.rs  rdf.rs  store.rs
src/dc/: mod.rs
testdata/: meta.biblatex  meta.ttl  meta.txt  meta_sha256.ttl
tests/: rdf_test.rs
