[package]
name = "kitab"
version = "0.0.1"
authors = ["nolash <dev@holbrook.no>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xattr = "0.2.2"
#inotify = "0.8.0"
regex = "1.5.5"
rio_turtle = "~0.7.1"
rio_api = "~0.7.1"
hex = "^0.4"
mime = "^0.3.13"
unic-langid-impl = "^0.9.0"
biblatex = "^0.6.2"
sha2 = "^0.10.2"
log = "^0.4"
env_logger = "^0.9"
urn = "^0.4.0"
#tempfile = "^3.3.0"

[dev-dependencies]
tempfile = "^3.3.0"

#[dependencies.rdf]
#rio_turtle = "~0.7.1"
#rio_api = "~0.7.1"
#optional = true

#[features]
#dump_rdf = ["rdf"]
#dump_bibtex = ["biblatex"]
