[package]
name = "kitab"
version = "0.0.1"
authors = ["nolash <dev@holbrook.no>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kitab"
path = "src/lib.rs"

[dependencies]
xattr = "0.2.3"
#inotify = "0.8.0"
regex = "1.5.6"
#rio_turtle = "~0.7.1"
#rio_api = "~0.7.1"
hex = "0.4.3"
mime = "0.3.16"
unic-langid-impl = "0.9.0"
biblatex = "0.6.2"
sha2 = "0.10.2"
log = "0.4.17"
env_logger = "0.9.0"
urn = "0.4.0"
#tempfile = "^3.3.0"
clap = "2.34.0"
directories = "4.0.1"
walkdir = "2.3.2"

[dev-dependencies]
tempfile = "3.3.0"

[dependencies.rio_turtle]
version = "0.7.1"
#optional = true

[dependencies.rio_api]
version = "0.7.1"
#optional = true

[dependencies.tree_magic]
version = "0.2.3"
optional = true

[features]
#rdf = ["rio_turtle", "rio_api"]
#dump_bibtex = ["biblatex"]
magic = ["tree_magic"]
